# quan-ly-vps-co-ai-ho-tro

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  TEST_PLAN.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
.claude/: settings.json
.claude/skills/vibe-builder/: SKILL.md
.github/workflows/: build.yml  ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  db.rs  gist_sync.rs  google_sync.rs  lib.rs  main.rs  sftp.rs  ssh.rs  sync.rs
src/components/ai/: AiPanel.tsx
src/components/hosts/: AddGroupDialog.tsx  AddHostDialog.tsx  ConnectModal.tsx  EditHostDialog.tsx  HostCard.tsx  HostTree.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/sftp/: SftpPanel.tsx
src/components/snippets/: SnippetsPanel.tsx
src/components/terminal/: TabBar.tsx  TerminalPane.tsx  TerminalToolbar.tsx
src/components/ui/: DeleteConfirm.tsx  Modal.tsx  ThemeToggle.tsx
src/lib/: tauri-api.ts  terminal-themes.ts
src/pages/: AiChatPage.tsx  HostsPage.tsx  KeysPage.tsx  LoginPage.tsx  SettingsPage.tsx  SnippetsPage.tsx
src/store/: index.ts
src/types/: index.ts
