[package]
name = "termius-clone"
version = "1.0.0"
description = "A Termius-like SSH client desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "termius_clone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
rand = "0.8"
dirs = "5"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
